
  * Added auto-detection of display format based on filename.

  * Auto-detection of bankswitch scheme by file extension now includes
    more human-readable formats (not restricted to DOS 3-char length).
    See the documentation for the new names.

  * Fixed bug in DPC+ scheme; 'fast fetch mode' was enabled at startup,
    when it should be disabled by default.

  * Added proper Retron77 port.

  * Added proper libretro port, and fixed display for OpenGLES renderers.

  * PNG/ZIP image support is now conditionally compiled into Stella.
    All major ports (Linux/macOS/Windows) have it enabled by default.

  * SDL/GUI support is now conditionally compiled into Stella.  All major
    ports (Linux/macOS/Windows) have it enabled by default.  This is
    currently needed by the libretro port.

  * Updated included PNG library to latest stable version.

-Have fun!


6.0.1 to 6.0.2: (October 11, 2019)

  * Updated properties database for Pink Panther ROM.


6.0 to 6.0.1: (June 5, 2019)

  * Added support for CDFJ bankswitching type (Galaga, Wizard of War, etc).

  * Allow the DPC+ scheme to not enable playfield 'jitter' effect for
    certain older DPC+ driver versions; this allows 'Epic Adventure' ROM
    to finally work in Stella.


5.1.3 to 6.0: (December 23, 2018)

  * Note: because of major TIA sound changes, the state file format has
          changed, and old state files will not work with this release.

  * New cycle exact audio core based on work by Chris Brenner (crispy);
    greatly improved audio emulation accuracy (i.e. E.T., Ms. Pacman).

  * Full rewrite of the audio subsystem; resample TIA output to target
    sample rate directly in Stella.

  * Added option to force stereo sound for all ROMs, or to use the
    setting on a per-ROM basis.

  * Threading: decouple emulation from frame rendering.

  * Main loop rewritten; emulating speed and timing is now much more
    faithful (i.e. speed in Pick'n'Pile).
